# surd

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  mkdocs.offline.yml  mkdocs.yml  package-lock.json
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
app/: .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  examples.ts  index.css  main.tsx  vite-env.d.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: CellView.tsx  ContextMenu.tsx  InputBar.tsx  MathOutput.tsx  NotebookView.tsx  PaneResizer.tsx  SettingsPage.tsx  ShortcutsList.tsx  Sidebar.tsx  StatusBar.tsx  UndoToast.tsx  WorkspacePanel.tsx  exportPdf.ts  markdown.ts
app/src/editor/: CodeEditor.tsx  exactLang.ts  surdLang.ts
app/src/engine/: client.ts  lexer.ts  nameLatex.ts  types.ts  worker.ts
app/src/platform/: desktop.ts
app/src/plot/: LinePlot.ts  PlotView.tsx  SpectrogramPlot.ts  SpectrogramView.tsx  SplomPlot.ts  SplomView.tsx  Surface3DView.tsx  SurfacePlot.ts  exportPng.ts  mathtext.ts  scales.ts  snapshots.ts
app/src/state/: contextMenu.ts  dataFile.ts  notebookFile.ts  settings.ts  staleness.ts  storage.ts  store.ts  undo.ts  useMediaQuery.ts
benches/: engine.rs
docs/: getting-started.md  index.md  limits.md
docs/language/: complex.md  matrices.md  modules.md  numbers.md  programs.md  structs.md  syntax.md
docs/reference/: algebraic.md  calculus.md  complex.md  constants.md  data.md  dsp.md  elementary.md  index.md  linear-algebra.md  numeric.md  plotting.md  signals.md  stats.md  structs.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: eval.rs  mat.rs  roundtrip.rs
scripts/: build-offline-docs.mjs  bump-version.sh  check-version.sh
src/: algebraic.rs  ast.rs  data.rs  dataio.rs  discriminant.rs  dsp.rs  eval.rs  expr.rs  f64eval.rs  iir.rs  interval.rs  latex.rs  lexer.rs  lib.rs  main.rs  matrix.rs  nlfit.rs  parser.rs  remez.rs  rng.rs  signal.rs  special.rs  stats.rs
tests/: eval.rs  mat_import.rs  properties.proptest-regressions  properties.rs  regression.rs  robustness.rs
tests/common/: mod.rs
tests/fixtures/: nanvec.mat  real_v6.mat  real_v7.mat
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  main.js  smoke.mjs  worker.js
