[package]
name = "surd-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Standalone: the root workspace doesn't list this crate (fuzzing is
# nightly-only and shouldn't gate plain `cargo build`/`cargo test`).
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.surd]
path = ".."

# Catch arithmetic overflow as a crash during fuzzing, and keep enough debug
# info for readable backtraces. (Profiles are read from the crate cargo-fuzz
# builds as root, so these apply to `surd` too.)
[profile.release]
debug = 1
debug-assertions = true
overflow-checks = true

[[bin]]
name = "eval"
path = "fuzz_targets/eval.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mat"
path = "fuzz_targets/mat.rs"
test = false
doc = false
bench = false
