[package]
name = "exact-wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen bindings for the exact CAS engine (browser frontend)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
exact = { path = ".." }
wasm-bindgen = "0.2"
# Structured results for the JS side (kind/text/latex/plot/error).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
