[package]
name = "surd-wasm"
version = "0.5.0"
edition = "2021"
description = "wasm-bindgen bindings for the Surd CAS engine (browser frontend)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
surd = { path = ".." }
wasm-bindgen = "0.2"
# Structured results for the JS side (kind/text/latex/plot/error).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
